--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,6 @@ nav ul {
 
 nav li /* Balise <a> dans le header */ {
   color: black;
-
   padding-right: 30px;
 }
 
@@ -54,7 +53,6 @@ nav a {
   color: black;
   text-decoration: none;
   padding-right: 40px; /* Espace entre le texte et le bord de page */
-
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -65,6 +63,7 @@ nav a:hover /* Quand on survole le texte */ {
   border-top: 2px solid #0065fc;
   padding-left: 10px;
   padding-right: 10px;
+  transform: scale(1.15);
 }
 
 /* title */
@@ -162,6 +161,13 @@ input::placeholder {
   margin-left: 20px; /* Espace entres les filtres */
   padding-right: 10px;
   border: 2px solid #f2f2f2;
+  transform: scale(1);
+  transition-property: all;
+  transition-duration: 400ms;
+}
+
+.filtres_bloc:hover {
+  transform: scale(1.12);
 }
 
 .filtres_bloc i /* Icône <i> des filtres */ {
@@ -265,6 +271,14 @@ input::placeholder {
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
     rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+
+  transform: scale(1);
+  transition-property: all;
+  transition-duration: 400ms;
+}
+
+.bloc_annonce_solo:hover {
+  transform: scale(1.12);
 }
 
 /* ---- Images des annonces (Article) ---- */
@@ -373,8 +387,14 @@ input::placeholder {
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
     rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  transform: scale(1);
+  transition-property: all;
+  transition-duration: 400ms;
 }
 
+.bloc_aside_solo:hover {
+  transform: scale(1.08);
+}
 /*----------------------------------------*/
 /* ---- Images des annonces (Aside) ---- */
 .aside_image {
@@ -460,6 +480,17 @@ article h1 /* Titre de l'article */ {
   border-radius: 15px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
     rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  opacity: 0.75;
+  filter: blur(2.5px);
+  transform: scale(1);
+  transition-property: all;
+  transition-duration: 400ms;
+}
+
+.activites_longue_carte:hover {
+  filter: blur(0);
+  opacity: 1;
+  transform: scale(1.07);
 }
 /*----------------------------------------*/
 /* ---- Image: Grande carte (activity_long) ---- */
@@ -470,6 +501,7 @@ article h1 /* Titre de l'article */ {
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
+
 /*----------------------------------------*/
 /* ---- Texte: Grande carte (activity_long) ---- */
 .activites_longue_carte h2 {
