correction loader + media query mobile / tablette

--- a/css/phone.css
+++ b/css/phone.css
@@ -1,4 +1,11 @@
 @media (max-width: 768px) {
+  /* loader */
+  img {
+    width: 75%;
+    padding-left: 45px;
+  }
+  /*end loader*/
+
   img {
     object-fit: cover;
   }
@@ -131,6 +138,10 @@
     margin: 5px;
   }
 
+  .filtres_bloc:hover {
+    transform: none;
+  }
+
   .filtres_bloc i {
     background: transparent;
   }
@@ -169,6 +180,14 @@
     width: 85%;
   }
 
+  .bloc_annonce_solo:hover {
+    transform: none;
+  }
+
+  .bloc_aside_solo:hover {
+    transform: none;
+  }
+
   #button_article {
     /* h3 hérbérgement à Marseille "Afficher plus"*/
     display: none;
@@ -196,6 +215,11 @@
   /* border-radius blanc */
   .activites_longue_carte {
     height: 160px;
+    filter: blur(0);
+    opacity: 1;
+  }
+  .activites_longue_carte:hover {
+    transform: scale(1);
   }
   /* End border-radius blanc */
 
