--- a/css/tablette.css
+++ b/css/tablette.css
@@ -1,4 +1,4 @@
-@media (max-width: 992px) {
+@media only screen and (max-width: 992px) {
   img {
     object-fit: cover;
   }
@@ -71,11 +71,28 @@
     padding-bottom: 10%;
   }
 
-  .activites_longue_carte:hover {
+  .activites_longue_carte {
+    height: 400px;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
+      rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+    opacity: 0.75;
+    filter: blur(2.5px);
     /*transition*/
-    filter: blur(0);
+    transform: scale(1);
+    transition-property: all;
+    transition-duration: 400ms;
+  }
+
+  /*retirer toute les interaction et effet en mode tabelle de la parti activité*/
+  .activites_longue_carte {
+    filter: none;
     opacity: 1;
-    transform: none;
+    pointer-events: none;
+  }
+
+  .activites_longue_carte h2 {
+    font-size: 11px;
   }
 
   .bloc_annonce_solo:hover {
@@ -98,4 +115,9 @@
     border-bottom: solid 2px #0065fc; /* ligne bleu que pour la nav footer au survole */
   }
   /* End Footer */
+
+  .logo_loader img {
+    width: 70%;
+    margin-left: 15%;
+  }
 }
